<resources>
    <string name="app_name">Charged Cars</string>
    <string name="olvido_su_pass"><u>¿Olvido su Contraseña?</u></string>
    <string name="puntos_de_recarga">Puntos de Recarga</string>
    <string name="textview">TextView</string>
    <string name="charged_cars_company">Charged Cars Company</string>
    <string name="ingrese_su_correo">Ingrese su Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar">Iniciar</string>
    <string name="registrarse">Registrarse</string>
    <string name="hacker_login">Hacker Login</string>
    <string name="recuperar_contrase_a">Recuperar Contraseña</string>
    <string name="ingrese_su_correo_registrado">Ingrese su Correo Registrado</string>
    <string name="enviar">Enviar</string>
    <string name="formulario_de_registro">Formulario de Registro</string>
    <string name="ingrese_su_nombre">Ingrese su Nombre</string>
    <string name="ingrese_su_apellido">Ingrese su Apellido</string>
    <string name="ingrese_su_fecha_de_nacimiento">Ingrese su fecha de Nacimiento</string>
    <string name="ingrese_su_contrase_a">Ingrese su Contraseña</string>
    <string name="ingrese_de_nuevo_su_contrase_a">Ingrese de Nuevo Su Contraseña</string>
    <string name="registrar">Registrar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ingrese_su_ubicacion">ingrese su ubicacion</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="confirmacion">Confirmacion</string>
    <string name="telefono">Telefono</string>
    <string name="confirmaci_n_de_contrase_a">Confirmación de contraseña</string>
    <string name="disponible">Disponible</string>
    <string name="no_disponible">No Disponible</string>
    <string name="disponibilidad">Disponibilidad</string>
    <string name="has_iniciado_sesi_n_correctamente">Has iniciado sesión correctamente</string>
    <string name="por_favor_complete_todas_las_casillas">Por favor complete todas las casillas</string>


    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>


    <string-array name="tipo_punto_recarga">
        <item>Automoviles Electricos</item>
        <item>Camionetas Electricas</item>
        <item>Camiones Electricos</item>
        <item>Buses Electricos</item>
        <item>Motos Electricas</item>
        <item>Patinetas Eletricas</item>
    </string-array>
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Subaru Titulo Prueba</string>
    <string name="nav_header_subtitle">subaru77@toyota.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>