<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="center_horizontal"
android:orientation="vertical"
tools:context=".fragment.PuntoRecargaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:gravity="center|fill"
            android:text="Tipo de punto recarga"
            android:textColor="@color/white"
            android:textSize="16dp"
            />

        <Spinner
            android:id="@+id/spinnerFragmentPuntoRecarga"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:minHeight="48dp" />

    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"

            android:layout_weight="1"
            android:text="@string/disponibilidad"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <RadioButton
            android:id="@+id/rbDisponiblePuntoRecargaFragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/color_casilla"
            android:checked="true"
            android:text="@string/disponible"
            android:textSize="14dp" />

        <RadioButton
            android:id="@+id/rbNoDisponiblePuntoRecargaFragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1.2"
            android:background="@drawable/color_casilla"
            android:text="@string/no_disponible"
            android:textSize="14dp" />
    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewRecarga"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>