<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutRecovery"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/animation_list_layoutt_1"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RecuperarPassActivity">

    <TextView
        android:id="@+id/textViewCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" 0 %"
        android:textSize="30dp"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/Circular_Bar_Circle"
        style="?android:attr/progressBarStyle"
        android:layout_width="232dp"
        android:layout_height="272dp"
        android:visibility="invisible"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/cpb_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtRecuperar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/recuperar_contrase_a"
                android:textColor="@color/white"
                android:textSize="34dp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/imageViewRecuperar"
                android:layout_width="wrap_content"
                android:layout_height="169dp"
                android:layout_marginBottom="10dp"
                app:srcCompat="@drawable/recovery" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputLayoutCorreoRecuperacion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:endIconMode="clear_text"
                app:errorTextAppearance="@font/cormorant_sc_bold"
                app:errorTextColor="@color/red_error"
                app:startIconDrawable="@drawable/ic_baseline_email_24"

                app:startIconTint="@color/blue_dark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edCorreoRecuperar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@drawable/color_casilla_dos"
                    android:hint="@string/ingrese_su_correo_registrado"
                    android:inputType="textEmailAddress"

                    android:textSize="16dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputLayoutFechaRecuperar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:endIconMode="clear_text"
                app:errorTextAppearance="@font/cormorant_sc_bold"
                app:errorTextColor="@color/red_error"
                app:startIconDrawable="@drawable/ic_baseline_edit_calendar_24"
                app:startIconTint="@color/blue_dark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edFechaCumpleRecuperacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@drawable/color_casilla_dos"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/ingrese_su_fecha_de_nacimiento"
                    android:inputType="date"
                    android:textSize="16dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnEnviarRecuperar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:onClick="envioCorreoRecuperar"
                android:text="@string/enviar"
                android:textSize="14dp" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>