<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayoutRegistro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterUserActivity"
    android:background="@drawable/animation_list_layoutt_1"
    >

    <TextView
        android:id="@+id/textViewCircle_Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" 0 %"
        android:textSize="30dp"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/Circular_Bar_Circle_Register"
        style="?android:attr/progressBarStyle"
        android:layout_width="232dp"
        android:layout_height="272dp"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/cpb_4"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtFormularioRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/formulario_de_registro"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="176dp"
                app:srcCompat="@drawable/formulario_pc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputLayoutNombreRegistro"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"

                    app:endIconMode="clear_text"
                    app:errorTextAppearance="@font/cormorant_sc_bold"
                    app:errorTextColor="@color/red_error"
                    app:startIconDrawable="@drawable/ic_baseline_person_add_alt_1_24"
                    app:startIconTint="@color/blue_dark">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edNombreRegistro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="7dp"
                        android:layout_marginBottom="15dp"
                        android:background="@drawable/color_casilla_dos"
                        android:hint="@string/nombre"
                        android:inputType="textPersonName"
                        android:textSize="14dp"

                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputLayoutApellidoRegistro"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:endIconMode="clear_text"
                    app:errorTextAppearance="@font/cormorant_sc_bold"
                    app:errorTextColor="@color/red_error"
                    app:startIconDrawable="@drawable/ic_baseline_person_add_alt_1_24"
                    app:startIconTint="@color/blue_dark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edApellidoRegistro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="15dp"
                        android:background="@drawable/color_casilla_dos"
                        android:hint="@string/apellidos"
                        android:inputType="textPersonName"
                        android:textSize="14dp" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputLayoutFechaRegistro"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:endIconMode="clear_text"
                app:errorTextAppearance="@font/cormorant_sc_bold"
                app:errorTextColor="@color/red_error"
                app:startIconDrawable="@drawable/ic_baseline_edit_calendar_24"
                app:startIconTint="@color/blue_dark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edFechaCumpleRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@drawable/color_casilla_dos"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/ingrese_su_fecha_de_nacimiento"
                    android:inputType="date"
                    android:onClick="obtenerFechaCumple"
                    android:textSize="16dp"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"

                >

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputLayoutTelefonoRegistro"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="1.7"
                    app:endIconMode="clear_text"
                    app:errorTextAppearance="@font/cormorant_sc_bold"


                    app:errorTextColor="@color/red_error"
                    app:prefixText="+57"


                    app:prefixTextColor="@color/blue_dark_2"

                    app:startIconDrawable="@drawable/ic_baseline_phone_24"
                    app:startIconTint="@color/blue_dark"

                    >


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edTelefonoRegistro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/color_casilla_dos"

                        android:hint="@string/telefono"
                        android:inputType="phone"

                        android:textSize="16dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="7dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"

                    android:layout_marginBottom="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/color_casilla"
                    android:onClick="clickSwitch"
                    android:text="Ubicacion GPS"
                    android:textAlignment="center"
                    android:textSize="12dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"></LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputLayoutCorreoRegistro"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:counterEnabled="true"
                app:counterMaxLength="256"

                app:counterTextColor="@color/azul_celeste"
                app:endIconMode="clear_text"
                app:errorTextAppearance="@font/cormorant_sc_bold"

                app:errorTextColor="@color/red_error"

                app:startIconDrawable="@drawable/ic_baseline_email_24"
                app:startIconTint="@color/blue_dark"


                >

                <!--app:counterTextAppearance="@font/cormorant_sc_bold"-->

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edCorreoRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    android:background="@drawable/color_casilla_dos"
                    android:hint="@string/ingrese_su_correo"
                    android:inputType="textEmailAddress"
                    android:maxLength="257"
                    android:textSize="16dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputLayoutPassEnterRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="password_toggle"
                app:errorTextAppearance="@font/cormorant_sc_bold"

                app:errorTextColor="@color/red_error"
                app:helperText="La contraseña debe ser de 6 caracteres como minimo"


                app:helperTextTextColor="@color/azul_celeste"

                app:startIconDrawable="@drawable/ic_baseline_lock_person_24"
                app:startIconTint="@color/blue_dark"


                >

                <!--app:helperTextTextAppearance="@font/cormorant_sc_bold"-->

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edPassRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    android:background="@drawable/color_casilla_dos"
                    android:hint="@string/contrase_a"
                    android:inputType="textPassword"
                    android:maxLength="51"
                    android:textSize="16dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputLayoutPassRepeatRegistro"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:endIconMode="password_toggle"
                app:errorTextAppearance="@font/cormorant_sc_bold"


                app:errorTextColor="@color/red_error"

                app:startIconDrawable="@drawable/ic_baseline_lock_person_24"
                app:startIconTint="@color/blue_dark"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edNewPassRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    android:background="@drawable/color_casilla_dos"
                    android:hint="@string/confirmaci_n_de_contrase_a"
                    android:inputType="textPassword"
                    android:textSize="16dp"


                    />


            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnRegistrarRegistro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"

                android:text="@string/registrar"
                android:textSize="14dp" />

            <!--android:onClick="registrarUsuarios"-->

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>